# witness-encryption-demos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  compute_clt_witness  encrypt.py  group.c  group.h  make_puzzle_enc.py  make_sudoku_enc.py  mmap.py  pentomino_reduction.py  sudoku1.txt  sudoku2.txt  sudoku_encryption.py  sudoku_reduction.py  test_clt_witness_scheme  tests.py  unsolvable_sudoku.txt  util.py
input_puzzles/: pentomino_0.txt  pentomino_1.txt  sudoku_0.txt  sudoku_1.txt  sudoku_1_solution.txt  sudoku_2.txt  sudoku_2_solution.txt  sudoku_3_solution.txt  sudoku_4_solution.txt  sudoku_unsolv.txt
old/: trash.txt  util.py
output_puzzles/: sets_pentomino_0.txt  sets_pentomino_1.txt  sets_sudoku_0.txt  sets_sudoku_1.txt  sets_sudoku_1_solution.txt  sets_sudoku_2.txt  sets_sudoku_2_solution.txt  sets_sudoku_3_solution.txt  sets_sudoku_4_solution.txt  sets_sudoku_unsolv.txt
puzzles/: easy.c  sudoku1.c  sudoku2.c  unsolvable_2x2_sudoku.c
reductions/: pentomino_reduction.py  sudoku_encryption.py
src/: clt.c  clt13.h  clt_elem.c  clt_elem.h  crt_tree.c  crt_tree.h  estimates.c  estimates.h  utils.c  utils.h
sudoku1/: pp_l=20.enc
sudoku1/message_bit_0/: message_bit.enc  set_0.enc  set_1.enc  set_10.enc  set_100.enc  set_101.enc  set_102.enc  set_103.enc  set_104.enc  set_105.enc  set_106.enc  set_107.enc  set_108.enc  set_109.enc  set_11.enc  set_110.enc  set_111.enc  set_112.enc  set_113.enc  set_114.enc  (+229 more)
sudoku_sets/: sudoku_convert.txt
test/: compute_clt_witness.c  test_clt.c  test_clt_state_new.c  test_clt_witness_scheme.c
(+63495 files in other folders)
